ACPI: ec: Increase timeout from 50 to 500 ms to handle old slow machines.

http://bugzilla.kernel.org/show_bug.cgi?id=7466

Signed-off-by: Len Brown <len.brown@intel.com>